HOMEPAGE: refactor navbar looking after the max width of the main container + background, sizes of carousel, equate modules #elenco_news and #landing_cavatappi background and centering

--- a/index.html
+++ b/index.html
@@ -1277,15 +1277,20 @@
   </div>
   <div id="timeline_news_wrap">
     <div class="container">
-      <div id="timeline_news"><div class="kineticjs-content" role="presentation" style="position: relative; display: inline-block; width: 1003px; height: 175px;"><canvas width="1003" height="175" style="padding: 0px; margin: 0px; border: 0px; background: transparent; position: absolute; top: 0px; left: 0px; width: 1003px; height: 175px;"></canvas><canvas width="1003" height="175" style="padding: 0px; margin: 0px; border: 0px; background: transparent; position: absolute; top: 0px; left: 0px; width: 1003px; height: 175px;"></canvas><canvas width="1003" height="175" style="padding: 0px; margin: 0px; border: 0px; background: transparent; position: absolute; top: 0px; left: 0px; width: 1003px; height: 175px;"></canvas><canvas width="1003" height="175" style="padding: 0px; margin: 0px; border: 0px; background: transparent; position: absolute; top: 0px; left: 0px; width: 1003px; height: 175px;"></canvas><canvas width="1003" height="175" style="padding: 0px; margin: 0px; border: 0px; background: transparent; position: absolute; top: 0px; left: 0px; width: 1003px; height: 175px;"></canvas></div></div>
+      <div id="timeline_news"><div class="kineticjs-content" role="presentation" style="position: relative; display: inline-block; width: 1003px; height: 175px;">
+      <div id="wrapper-canvas">
+      <img src="assets/img/campagnolo-canvas.png" alt="grafico timeline">
+      </div>
+
+        <!-- <canvas width="1003" height="175" style="padding: 0px; margin: 0px; border: 0px; background: transparent; position: absolute; top: 0px; left: 0px; width: 1003px; height: 175px;"></canvas><canvas width="1003" height="175" style="padding: 0px; margin: 0px; border: 0px; background: transparent; position: absolute; top: 0px; left: 0px; width: 1003px; height: 175px;"></canvas><canvas width="1003" height="175" style="padding: 0px; margin: 0px; border: 0px; background: transparent; position: absolute; top: 0px; left: 0px; width: 1003px; height: 175px;"></canvas><canvas width="1003" height="175" style="padding: 0px; margin: 0px; border: 0px; background: transparent; position: absolute; top: 0px; left: 0px; width: 1003px; height: 175px;"></canvas><canvas width="1003" height="175" style="padding: 0px; margin: 0px; border: 0px; background: transparent; position: absolute; top: 0px; left: 0px; width: 1003px; height: 175px;"></canvas> --></div></div>
     </div>
   </div>
 
   <div id="elenco_news">
     <div class="container">
       <div class="row">
-        <div class="header_elenco_news">
-          <div class="cat">Lookbook</div>
+        <div class="header_elenco_news" >
+          <div class="cat" id="wrapper-carousel-home">Lookbook</div>
           <div class="tit">#movementbycampagnolo</div>
         </div>
         <div class="row">
