--- a/product.html
+++ b/product.html
@@ -64,20 +64,23 @@ dataLayer.push({'content_ids':['8227'],'content_name':'PROTEMP WINTER ARM WARMER
 
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i,700,700i,900,900i&amp;subset=latin-ext" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.0/slick.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.0/slick-theme.css" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.1.25/jquery.fancybox.min.css" rel="stylesheet" />
-    <link href="/css/menu_restyle.css?v2" rel="stylesheet">
-    <link href="/css/new-menu.css" rel="stylesheet">
-    <link href="/css/shop_2017.css?v5" rel="stylesheet">
+    <link href="css/menu_restyle.css" rel="stylesheet">
+    <link href="css/new-menu.css" rel="stylesheet">
+    <link href="css/shop_2017.css?v5" rel="stylesheet">
+
+    <link href="css/photoslurp.css" rel="stylesheet">
+
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     
     <style type="text/css">
         input.error { border: 1px solid red !important; }
     </style>
 
-    <script src="/js/modernizr.custom.js"></script>
+    <script src="js/modernizr.custom.js"></script>
     <script type="text/javascript">
 function gaTrackPage(pName){} 
 function gaTrackEvent(pEventName,pEventDetail){} 
@@ -95,7 +98,7 @@ function gaTrackEvent(pEventName,pEventDetail){}
     <div class="drop_country_wrap">
         <div class="close"></div>
         <div class="logo">
-            <img src="/img/logo_campagnolo_white.png" alt="Official Campagnolo website">
+            <img src="assets/img/logo_campagnolo_white.png" alt="Official Campagnolo website">
         </div>
         <div class="country_wrap wrap">
             <div class="tit">Select country</div>
@@ -340,7 +343,7 @@ function gaTrackEvent(pEventName,pEventDetail){}
             <div class="logo">
                 <a href="/WW/en" title="Official Website Campagnolo | Bike Wheels and Groupsets">
                     <span>Official Website Campagnolo | Bike Wheels and Groupsets</span>
-                    <img src="/img/logo_campagnolo.png" alt="Official Website Campagnolo | Bike Wheels and Groupsets" /><span>Logo Campagnolo</span>
+                    <img src="assets/img/logo_campagnolo.png" alt="Official Website Campagnolo | Bike Wheels and Groupsets" /><span>Logo Campagnolo</span>
                 </a>
             </div>
             <div id="menu">
@@ -460,6 +463,11 @@ function gaTrackEvent(pEventName,pEventDetail){}
                                 E-Store
                             </a>
                         </li>
+                         <li>
+              <a href="lookbook.html" class="mainCart">
+                #movementbycampagnolo
+              </a>
+            </li>
                     </ul>
                     <!-- /SUBMENU DESKTOP -->
                 </div>
@@ -491,7 +499,7 @@ function gaTrackEvent(pEventName,pEventDetail){}
     <div class="logo">
         <a href="/WW/en" title="Official Website Campagnolo | Bike Wheels and Groupsets">
             <span>Official Website Campagnolo | Bike Wheels and Groupsets</span>
-            <img src="/img/logo_campagnolo.png" alt="Official Website Campagnolo | Bike Wheels and Groupsets" /><span>Logo Campagnolo</span>
+            <img src="assets/img/logo_campagnolo.png" alt="Official Website Campagnolo | Bike Wheels and Groupsets" /><span>Logo Campagnolo</span>
         </a>
     </div>
     <a class="wishlist" href="/WW/en/store/wishlist" title="Whishlist"><span><i class="material-icons">favorite</i><span class="wishlist_count">0</span></span></a>
@@ -1580,6 +1588,46 @@ They employ special extremely reflective sections, effectively positioned to mee
     </div>
 </div>
 
+<div class="medium-wrapper">
+<!-- Start Photoslurp Embed Code -->
+
+<h2 class="h2">#movementbycampagnolo</h2>
+
+<div id="campagnolo-carousel-product" class="ps-container">
+        <script data-type="photoslurp">
+          if(!photoSlurpWidgetSettings) {
+            var photoSlurpWidgetSettings = {};
+          }
+
+          (function() {
+       photoSlurpWidgetSettings['campagnolo-carousel-product'] = {
+              widgetId: 'product',
+              widgetType: 'carousel',
+              albumId: 1240,
+              theme: 'modern',
+              productId: 'PROTEMP WINTER ARM WARMER',
+              lang: 'en', 
+              pageLimit: 16,
+              thumbOverlay: true,
+              shopThisLookText: 'Shop it now',
+              ctaButton: 'Buy',
+              visibleProducts: 2,  
+              debug: true
+            };
+        var script = document.createElement('script');
+        script.async = true;
+        script.src = '//static.photoslurp.com/widget/v3/widget_loader.js';
+        var entry = document.getElementsByTagName('script')[0];
+        entry.parentNode.insertBefore(script, entry);
+})();
+        </script>
+
+          
+        </div>
+      </div>
+<!-- End Photoslurp Embed Code -->
+</div>
+
 
         <!-- Newsletter -->
         <section class="newsletter-wrap">
@@ -1917,18 +1965,18 @@ They employ special extremely reflective sections, effectively positioned to mee
         </svg>
     </div>
 
-    <script src="/js/isMobile.min.js"></script>
-    <script src="/js/vendor/jquery-3.2.1.min.js"></script>
+    <script src="js/isMobile.min.js"></script>
+    <script src="js/jquery-3.2.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/lodash/4.13.1/lodash.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.0/slick.min.js"></script>
-    <script src="/js/jquery.easing-1.3.min.js"></script>
-    <script src="/js/vendor/imagesloaded.pkgd.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="js/jquery.easing-1.3.min.js"></script>
+    <script src="js/imagesloaded.pkgd.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.1.25/jquery.fancybox.min.js"></script>
-    <script type="text/javascript" src="/js/json2.min.js"></script>
-    <script type="text/javascript" src="/js/e-com/Basket.js?v=2"></script>
-    <script type="text/javascript" src="/js/menu.js"></script>
-    <script src="/js/shop_2017.js"></script>
+    <script type="text/javascript" src="js/json2.min.js"></script>
+    <script type="text/javascript" src="js/Basket.js"></script>
+    <script type="text/javascript" src="js/menu.js"></script>
+    <script src="js/shop_2017.js"></script>
     <script src="/js/wishlist.js"></script>
     <script src="/js/e-com/shopv2-gtm-helper.js"></script>
     <script type="text/javascript" src="/js/jquery.validate.js"></script>
