--- a/product.html
+++ b/product.html
@@ -341,7 +341,7 @@ function gaTrackEvent(pEventName,pEventDetail){}
     <div class="menu">
         <div class="container clearfix">
             <div class="logo">
-                <a href="/WW/en" title="Official Website Campagnolo | Bike Wheels and Groupsets">
+                <a href="index.html" title="Official Website Campagnolo | Bike Wheels and Groupsets">
                     <span>Official Website Campagnolo | Bike Wheels and Groupsets</span>
                     <img src="assets/img/logo_campagnolo.png" alt="Official Website Campagnolo | Bike Wheels and Groupsets" /><span>Logo Campagnolo</span>
                 </a>
@@ -1591,7 +1591,7 @@ They employ special extremely reflective sections, effectively positioned to mee
 <div class="medium-wrapper">
 <!-- Start Photoslurp Embed Code -->
 
-<h2 class="h2">#movementbycampagnolo</h2>
+<h2 class="h2" id="product-carousel-heading">#movementbycampagnolo</h2>
 
 <div id="campagnolo-carousel-product" class="ps-container">
         <script data-type="photoslurp">
