padding-bottom load more button on lookbook, margins and paddings productpage, logo linking to index in all pages

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
   <div class="menu">
     <div class="container clearfix">
       <div class="logo">
-        <a href="/WW/en" title="Official Website Campagnolo | Bike Wheels and Groupsets">
+        <a href="index.html" title="Official Website Campagnolo | Bike Wheels and Groupsets">
           <span>Official Website Campagnolo | Bike Wheels and Groupsets</span>
           <img src="assets/img/logo_campagnolo.png" alt="Official Website Campagnolo | Bike Wheels and Groupsets" /><span>Logo Campagnolo</span>
         </a>
